@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Added a SourceHandler::File
 
 0.3.8  2022-09-02T12:19:11+02:00
         - Correctly check exit code of processes
